# discord-bot

./: .commitlintrc.json  .env.example  .gitignore  AGENTS.md  CLAUDE.md  EXPERIMENT.md  README.md  TESTING.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml  issue.yml  symptom.yml
.github/workflows/: ci.yml  commitlint.yml
bot/: __init__.py  __main__.py  client.py  config.py
bot/commands/: __init__.py  fun.py  music.py  utility.py
specs/bot/: 0001-prd.md  0002-play-music-from-youtube.md  commands.md
tests/: test_casino.py  test_choose.py  test_coinflip.py  test_config.py  test_dice.py  test_lol.py  test_main.py  test_music.py  test_registry.py  test_rps.py
